# Restaurant-Api

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240727152246_init.down.sql  20240727152246_init.up.sql  20240728151805_sample_dataa.down.sql  20240728151805_sample_dataa.up.sql
src/: main.rs
src/config/: mod.rs
src/db/: connection.rs  connection_test.rs  mod.rs
src/models/: mod.rs  restaurant_models.rs  route_models.rs
src/routes/: mod.rs
