[package]
name = "restaurant-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.7"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "^0.5", features = ["trace"] }
sqlx = { version = "^0.6", features = [
    "postgres",
    "runtime-async-std-native-tls",
    "offline",
    "uuid",
    "chrono",
    "time"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
dotenv= "^0.15"
hyper = { version = "0.14", features = ["full"] }
